--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,206 +1,34 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 60px);
-  gap: 5px;
-  width: 1000px;
-  margin: 20px auto;
-  background-color: #f0f0f0;
+ 
+.div{
+  background: linear-gradient(135deg, #1e3c72, #2a5298);
+  
 }
-
-.grid-container {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.grid-row {
-  display: flex;
-  gap: 5px;
-}
-.grid-item {
+.container {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #a5d8ff; /* changed from #63d367 */
-  color: rgb(0, 0, 0);
-  font-weight: bold;
-  font-size: 40px;
-  width: 100px;
-  user-select: none;
-  border: 2px solid black;
+  gap: 2rem;
+  flex-wrap: wrap;
+  padding: 2rem;
 }
 
-.player-coin1 {
-  width: 30px;
-  height: 30px;
-  background-color: #ff6b00; /* changed from red */
-  border-radius: 50%;
-  font-size: 20px !important;
-  color: rgb(255, 255, 255);
-  padding-left: 3px;
+.card {
+  background: white;
+  border-radius: 20px;
+  padding: 2rem;
+  width: 300px;
+  height: 200px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  text-align: center;
+  cursor: pointer; 
 }
 
-.player-coin2 {
-  width: 30px;
-  height: 30px;
-  font-size: 20px !important;
-  padding-left: 3px;
-  color: rgb(255, 255, 255);
-  background-color: #5f27cd; /* changed from rgb(20, 0, 196) */
-  border-radius: 50%;
+.card:hover { 
+  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
 }
 
-.ladder-img1 {
-     position: absolute;
-    top: 368.3px;
-    left: -24.9px;
-    width: 250px;
-    height: 150px;
+.card h2 {
+  color: #2a5298;
+  margin-bottom: 1rem;
 }
-.ladder-img2 {
-  position: absolute;
-  bottom: 0;
-  left: 15px;
-  width: 256px;
-  height: 283px;
-  transform: rotate(14deg);
-}
-.ladder-img3 {
-  position: absolute;
-  bottom: 14px;
-  left: 804px;
-  width: 256px;
-  height: 237px;
-  transform: rotate(354deg);
-}
-.ladder-img4 {
-  position: absolute;
-  bottom: -76px;
-  left: 381.2px;
-  width: 297px;
-  height: 283px;
-  transform: rotate(43deg);
-}
-.ladder-img5 {
-  position: absolute;
-  bottom: 231px;
-  left: 345.2px;
-  width: 126px;
-  height: 91px;
-  transform: rotate(261deg);
-}
-.ladder-img6 {
-  position: absolute;
-  bottom: 38px;
-  left: 400.2px;
-  width: 297px;
-  height: 673px;
-  transform: rotate(300deg);
-}
-.ladder-img7 {
-  position: absolute;
-  bottom: 518px;
-  left: 875.1px;
-  width: 197px;
-  height: 103px;
-  transform: rotate(299deg);
-}
-.ladder-img8 {
-  position: absolute;
-  bottom: 264px;
-  left: 680.2px;
-  width: 251px;
-  height: 290px;
-  transform: rotate(258deg);
-}
-.snake-img1 {
-  position: absolute;
-  bottom: 14px;
-  left: 423.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(2deg);
-}
-.snake-img2 {
-  position: absolute;
-  bottom: 172px;
-  left: 524.2px;
-  width: 151px;
-  height: 124px;
-  transform: rotate(85deg);
-}
-.snake-img3 {
-  position: absolute;
-  bottom: 114px;
-  left: 823.2px;
-  width: 151px;
-  height: 190px;
-  transform: rotate(13deg);
-}
-.snake-img4 {
-  position: absolute;
-  bottom: 231px;
-  left: 523.2px;
-  width: 151px;
-  height: 290px;
-  transform: rotate(294deg);
-}
-.snake-img5 {
-  position: absolute;
-  bottom: 98px;
-  left: 79.2px;
-  width: 151px;
-  height: 347px;
-  transform: rotate(18deg);
-}
-.snake-img6 {
-  position: absolute;
-  bottom: 266px;
-  left: 123.2px;
-  width: 151px;
-  height: 290px;
-  transform: rotate(99deg);
-}
-.snake-img7 {
-  position: absolute;
-  bottom: 108px;
-  left: 423.2px;
-  width: 151px;
-  height: 520px;
-  transform: rotate(48deg);
-}
-.snake-img8 {
-  position: absolute;
-  bottom: 531px;
-  left: 697.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(50deg);
-}
-.snake-img9 {
-  position: absolute;
-  bottom: 531px;
-  left: 497.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(50deg);
-}
-.snake-img10 {
-  position: absolute;
-  bottom: 531px;
-  left: 197.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(50deg);
-}
-
-@media screen and (max-width: 600px) {
-  .aa {
-    position: absolute !important;
-    top: 100% !important;
-    left: 0 !important;
-    width: 400px !important;
-  }
-}
-
