--- a/src/app/tic-tac-toe/tic-tac-toe.component.css
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.css
@@ -3,6 +3,10 @@
   text-align: center; 
   background-color: rgb(35, 36, 42) ;
 }
+.scoreboard {
+  box-shadow: 0 0 15px   rgba(255, 193, 7, 0.463) !important; /* Soft yellow glow */
+}
+
 .container {
   display: flex;
   flex-direction: column;
