--- a/src/app/snake-ladder/snake-ladder.component.css
+++ b/src/app/snake-ladder/snake-ladder.component.css
@@ -31,176 +31,60 @@
   border: 2px solid black;
 }
 
-.player-coin1 {
+.player-coin1, .player-coin2 {
   width: 30px;
   height: 30px;
-  background-color: #ff6b00; /* changed from red */
   border-radius: 50%;
   font-size: 20px !important;
-  color: rgb(255, 255, 255);
+  color: white;
   padding-left: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-coin1 {
+  background-color: #ff6b00;
 }
 
 .player-coin2 {
-  width: 30px;
-  height: 30px;
-  font-size: 20px !important;
-  padding-left: 3px;
-  color: rgb(255, 255, 255);
-  background-color: #5f27cd; /* changed from rgb(20, 0, 196) */
-  border-radius: 50%;
+  background-color: #5f27cd;
 }
 
-.ladder-img1 {
-     position: absolute;
-    top: 368.3px;
-    left: -24.9px;
-    width: 250px;
-    height: 150px;
-}
-.ladder-img2 {
+/* Ladders */
+.ladder-img1 { position: absolute; top: 368.3px; left: -24.9px; width: 250px; height: 150px; }
+.ladder-img2 { position: absolute; bottom: 0; left: 15px; width: 256px; height: 283px; transform: rotate(14deg); }
+.ladder-img3 { position: absolute; bottom: 14px; left: 804px; width: 256px; height: 237px; transform: rotate(354deg); }
+.ladder-img4 { position: absolute; bottom: -76px; left: 381.2px; width: 297px; height: 283px; transform: rotate(43deg); }
+.ladder-img5 { position: absolute; bottom: 231px; left: 345.2px; width: 126px; height: 91px; transform: rotate(261deg); }
+.ladder-img6 { position: absolute; bottom: 38px; left: 400.2px; width: 297px; height: 673px; transform: rotate(300deg); }
+.ladder-img7 { position: absolute; bottom: 518px; left: 875.1px; width: 197px; height: 103px; transform: rotate(299deg); }
+.ladder-img8 { position: absolute; bottom: 264px; left: 680.2px; width: 251px; height: 290px; transform: rotate(258deg); }
+
+/* Snakes */
+.snake-img1 { position: absolute; bottom: 14px; left: 423.2px; width: 151px; height: 90px; transform: rotate(2deg); }
+.snake-img2 { position: absolute; bottom: 172px; left: 524.2px; width: 151px; height: 124px; transform: rotate(85deg); }
+.snake-img3 { position: absolute; bottom: 114px; left: 823.2px; width: 151px; height: 190px; transform: rotate(13deg); }
+.snake-img4 { position: absolute; bottom: 231px; left: 523.2px; width: 151px; height: 290px; transform: rotate(294deg); }
+.snake-img5 { position: absolute; bottom: 98px; left: 79.2px; width: 151px; height: 347px; transform: rotate(18deg); }
+.snake-img6 { position: absolute; bottom: 266px; left: 123.2px; width: 151px; height: 290px; transform: rotate(99deg); }
+.snake-img7 { position: absolute; bottom: 108px; left: 423.2px; width: 151px; height: 520px; transform: rotate(48deg); }
+.snake-img8 { position: absolute; bottom: 531px; left: 697.2px; width: 151px; height: 90px; transform: rotate(50deg); }
+.snake-img9 { position: absolute; bottom: 531px; left: 497.2px; width: 151px; height: 90px; transform: rotate(50deg); }
+.snake-img10 { position: absolute; bottom: 531px; left: 197.2px; width: 151px; height: 90px; transform: rotate(50deg); }
+
+.aa.container {
   position: absolute;
-  bottom: 0;
-  left: 15px;
-  width: 256px;
-  height: 283px;
-  transform: rotate(14deg);
-}
-.ladder-img3 {
-  position: absolute;
-  bottom: 14px;
-  left: 804px;
-  width: 256px;
-  height: 237px;
-  transform: rotate(354deg);
-}
-.ladder-img4 {
-  position: absolute;
-  bottom: -76px;
-  left: 381.2px;
-  width: 297px;
-  height: 283px;
-  transform: rotate(43deg);
-}
-.ladder-img5 {
-  position: absolute;
-  bottom: 231px;
-  left: 345.2px;
-  width: 126px;
-  height: 91px;
-  transform: rotate(261deg);
-}
-.ladder-img6 {
-  position: absolute;
-  bottom: 38px;
-  left: 400.2px;
-  width: 297px;
-  height: 673px;
-  transform: rotate(300deg);
-}
-.ladder-img7 {
-  position: absolute;
-  bottom: 518px;
-  left: 875.1px;
-  width: 197px;
-  height: 103px;
-  transform: rotate(299deg);
-}
-.ladder-img8 {
-  position: absolute;
-  bottom: 264px;
-  left: 680.2px;
-  width: 251px;
-  height: 290px;
-  transform: rotate(258deg);
-}
-.snake-img1 {
-  position: absolute;
-  bottom: 14px;
-  left: 423.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(2deg);
-}
-.snake-img2 {
-  position: absolute;
-  bottom: 172px;
-  left: 524.2px;
-  width: 151px;
-  height: 124px;
-  transform: rotate(85deg);
-}
-.snake-img3 {
-  position: absolute;
-  bottom: 114px;
-  left: 823.2px;
-  width: 151px;
-  height: 190px;
-  transform: rotate(13deg);
-}
-.snake-img4 {
-  position: absolute;
-  bottom: 231px;
-  left: 523.2px;
-  width: 151px;
-  height: 290px;
-  transform: rotate(294deg);
-}
-.snake-img5 {
-  position: absolute;
-  bottom: 98px;
-  left: 79.2px;
-  width: 151px;
-  height: 347px;
-  transform: rotate(18deg);
-}
-.snake-img6 {
-  position: absolute;
-  bottom: 266px;
-  left: 123.2px;
-  width: 151px;
-  height: 290px;
-  transform: rotate(99deg);
-}
-.snake-img7 {
-  position: absolute;
-  bottom: 108px;
-  left: 423.2px;
-  width: 151px;
-  height: 520px;
-  transform: rotate(48deg);
-}
-.snake-img8 {
-  position: absolute;
-  bottom: 531px;
-  left: 697.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(50deg);
-}
-.snake-img9 {
-  position: absolute;
-  bottom: 531px;
-  left: 497.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(50deg);
-}
-.snake-img10 {
-  position: absolute;
-  bottom: 531px;
-  left: 197.2px;
-  width: 151px;
-  height: 90px;
-  transform: rotate(50deg);
+  top: 25%;
+  right: -420px;
+  width: 400px;
 }
 
 @media screen and (max-width: 600px) {
-  .aa {
+  .aa.container {
     position: absolute !important;
     top: 100% !important;
-    left: 0 !important;
+    left: -628px !important;
     width: 400px !important;
   }
 }
-
