--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="div">
   <div class="container">
-  <div class="card" routerLink="/tic-tac-toe">
+  <div class="card  d-flex justify-content-center" routerLink="/tic-tac-toe">
     <h2> Tic Tac Toe</h2> 
   </div>
-  <div class="card" routerLink="/snake-ladder">
+  <div class="card  d-flex justify-content-center" routerLink="/snake-ladder">
     <h2>Snake and Ladder</h2> 
   </div>
 </div>
